# community-rpg

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  generate_tileset.py  license.rst  profile.txt  pyproject.toml  setup.cfg
.github/: CONTRIBUTING.md
resources/: Smithing.tsj  generate_tileset.py  rpg.tiled-project  world.tmj
resources/animations/characters/: masc-tawny-run.tsj
resources/data/: item_dictionary.json
resources/elizawy-lpc/: README.md
resources/elizawy-lpc/Objects/Furniture/: Barrel.tsj  Bin.tsj  Cabinet.tsj  Cauldron.tsj  Chest.tsj  Christmas Tree.tsj  Clock, Grandfather.tsj  Copy Machine.tsj  Countertop.tsj  Crate.tsj  Desk, Office.tsj  Desk, Vanity.tsj  Dresser.tsj  End Table.tsj  Fireplace, Cast Iron.tsj  Fireplace.tsj  Fridge.tsj  Ladder.tsj  Lighting, Floor.tsj  Lighting, Outdoors.tsj  Mirror, Standing.tsj  Oven, Modern.tsj  Planter.tsj  Sawhorse.tsj  Shavehorse.tsj  Shelf.tsj  Sink, Countertop.tsj  Sink, Pedestal.tsj  Standing Screen.tsj  Stone Slab.tsj  TV, Widescreen - No Service.tsj  TV, Widescreen.tsj  Table, Card.tsj  Table, Ornate Wood.tsj  Table, Rough Wood.tsj  Table, Workshop.tsj  Trough.tsj  Vending Machine.tsj  Water Cooler.tsj  Wolf Stone.tsj  (+2 more)
resources/elizawy-lpc/Objects/Moveable/: Shopping Cart.tsj  Wheelchair, Black.tsj  Wheelchair, Blue.tsj  Wheelchair, Pink.tsj  Wheelchair, Tan.tsj  Wheelchair, White.tsj
resources/elizawy-lpc/Objects/Nature/: Aquatic Plants (Animated).tsj  Bush - Evergreen A.tsj  Bush - Seasonal A.tsj  Bush - Seasonal B.tsj  Bush - Seasonal C.tsj  Bush - Tropical A.tsj  (+15 more)
resources/elizawy-lpc/Terrain/: Dirt (Non-Winter).tsj  Dirt (Winter).tsj  Dirt-Shallows (Autumn).tsj  Dirt-Shallows (Spring & Summer).tsj  Dirt-Shallows (Winter).tsj  Grass (Autumn).tsj  Grass (Spring).tsj  Grass (Summer).tsj  Grass (Winter).tsj  Grass-Dirt (Autumn).tsj  Grass-Dirt (Spring).tsj  Grass-Dirt (Summer).tsj  Grass-Dirt (Winter).tsj  Grass-Shallows (Autumn).tsj  Grass-Shallows (Spring).tsj  Grass-Shallows (Summer).tsj  Grass-Shallows (Winter).tsj  Ice-Water.tsj  Mountain (Autumn).tsj  Mountain (Spring).tsj  Mountain (Summer).tsj  Mountain (Winter).tsj  Mountain, Animated Water (Autumn).tsj  Mountain, Animated Water (Spring).tsj  Mountain, Animated Water (Summer).tsj  Mountain, Animated Water (Winter).tsj  Mountain, Features (Autumn).tsj  Mountain, Features (Spring).tsj  Mountain, Features (Summer).tsj  Mountain, Features (Winter).tsj  Mountain, Vines (Autumn).tsj  Mountain, Vines (Spring).tsj  Mountain, Vines (Summer).tsj  Mountain, Vines (Winter).tsj  Mountain, Waterfall Transitions (Autumn).tsj  Mountain, Waterfall Transitions (Spring).tsj  Mountain, Waterfall Transitions (Summer).tsj  Mountain, Waterfall Transitions - (Winter).tsj  Waterfall, Frozen.tsj  Waterfall.tsj
resources/maps/: dungeon_lvl_three_maze.json  farmhouse.json  graveyard_dungeon.json  graveyard_dungeon_second_level.json  main_map.json  main_map_new.json
resources/tilesets/: Bridges.tsj  Fences.tsj  Floor.tsj  Furniture.tsj  Nature.tsj  Seating.tsj  Small Items.tsj  Smithing.tsj  Structures.tsj  Wall Borders.tsj  terrain-animated.tsj  terrain-summer.tsj
rpg/: __main__.py  character_sprite.py  constants.py  debug_tools.py  game_view.py  load_game_map.py  loading_view.py  main_menu_view.py  message_box.py  path_following_sprite.py  player_sprite.py
rpg/sprites/: character_sprite.py  path_following_sprite.py  player_sprite.py  random_walking_sprite.py
rpg/views/: __init__.py  battle_view.py  game.py  game_view.py  inventory_view.py  loading_view.py  main_menu.py  main_menu_view.py  pause_view.py  settings_view.py
src/python_arcade_rpg/: character.py  character_sprite.py  characters_dictionary.json  constants.py  draw_bar.py  enemy_dictionary.json  game_map.py  game_view.py  inventory_view.py  load_game_map.py  loading_view.py  main.py  main_menu_view.py  message_box.py  path_following_sprite.py
src/python_arcade_rpg/maps/: farmhouse.json  farmhouse.tmx  graveyard_dungeon.json  graveyard_dungeon.tmx  main_map.json  main_map.tmx
src/python_arcade_rpg/sample_map/: samplemap.tmx
src/python_arcade_rpg/tilesets/: [A]Grass_pipo.json  [A]WaterFall_pipo.tsx  [A]Water_pipo.json  [A]Water_pipo.tsx  [Base]BaseChip_pipo.json
tmp/: README.md
(+233 files in other folders)
