[metadata]
name = community-rpg
version = "0.1.0"
description = An Open Source RPG Game developed with Python using the Arcade library.
long_description = file: README.md
author = Paul Vincent Craven
author_email = "paul.craven@simpson.edu"
url = https://github.com/pythonarcade/community-rpg
license = MIT
license_files = LICENSE

classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Games/Entertainment :: Role-Playing

[options]
packages = find:
include_package_data = True
python_requires = >= 3.7
setup_requires =
    setuptools >= 40.6
    pip >= 10
install_requires =
    arcade >= 2.6.10

[options.packages.find]
include =
    rpg
    rpg.*

[options.extras_require]
dev =
    black
    flake8
    isort
    pre-commit